--- a/Exercicios/ex022/fundo005.html
+++ b/Exercicios/ex022/fundo005.html
@@ -6,6 +6,7 @@
     <title>Posicionamento</title>
     <style>
         body {
+            height: ;
             background-image: url('imagens/wallpaper003.jpg');
             background-position: left top;
             background-size:cover;
